# gimmegit

./: .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  README.md  gimmegit.py  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: checks.yaml  command-ref.yaml  command-reference.yaml  deps.yaml  functional-full.yaml  functional-limited.yaml  functional-token.yaml  functional.yaml  lint.yaml  pipx.yaml  publish.yaml  synced.yaml  unit.yaml  uvx.yaml  zizmor.yaml
.scripts/: check_deps.py  extract_command_reference.py
scripts/: check_help_consistency.py
src/gimmegit/: __init__.py  _args.py  _cli.py  _help.py  _inspect.py  _models.py  _parse.py  _remote.py  _status.py  _version.py
tests/: test_context_no_token.py
tests/functional/: conftest.py  helpers.py  helpers_functional.py  test_arg_errors.py  test_bare_compare.py  test_child.py  test_clone.py  test_clone_no_token.py  test_clone_token.py  test_git_errors.py  test_outer.py  test_outer_clone.py  test_package.py  test_parse.py  test_return_dir.py  test_status.py  test_token.py
tests/stress/: conftest.py  helpers_stress.py  test_juju.py
tests/unit/: helpers_unit.py  test_context_no_token.py  test_parse.py  test_parse_github_url.py  test_remote.py  test_status.py
