[project]
name = "gimmegit"
version = "1.0.1.dev0"
description = "A tool for cloning GitHub repos and creating branches."
authors = [
    { name = "Dave Wilding", email = "tech@dpw.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = [
    "gitpython>=3.1.47,<4",
    "pre-commit>=4.6,<5",
    "PyGithub>=2.9.0,<3",
    # Dependencies of PyGithub. Specified because of security advisories.
    "PyJWT[crypto]>=2.12.1,<3",
    "requests>=2.33.1,<3",
]

[project.scripts]
gimmegit = "gimmegit._cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "pytest>=9.0.3,<10",
    "ty>=0.0.32,<0.1",
    "zizmor>=1.24.1,<2",
]

[build-system]
requires = [
    "uv_build>=0.11.7,<0.12",
]
build-backend = "uv_build"

[tool.ruff]
line-length = 99

[tool.ty.environment]
# Help ty resolve local imports in our testing code.
root = [
    "./src",
    "./tests/functional",
    "./tests/stress",
    "./tests/unit",
]
