[project]
name = "gimmegit"
version = "2.0.2.dev0"
description = "A tool for cloning GitHub repos and creating branches."
authors = [
    { name = "Dave Wilding", email = "tech@dpw.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.50,<4",
    "pre-commit>=4.6.0,<5",
    "PyGithub>=2.9.1,<3",
    # Dependencies of PyGithub. Specified because of security advisories.
    "PyJWT[crypto]>=2.13.0,<3",
    "requests>=2.34.2,<3",
]

[project.scripts]
gimmegit = "gimmegit._cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.13,<1",
    "pytest>=9.0.3,<10",
    "ty>=0.0.38,<1",
    "zizmor>=1.24.1,<2",
]

[build-system]
requires = [
    "uv_build>=0.11.15,<1",
]
build-backend = "uv_build"

[tool.ruff]
line-length = 99

[tool.ty.environment]
# Help ty resolve local imports in our testing code.
root = [
    "./src",
    "./tests/functional",
    "./tests/stress",
    "./tests/unit",
]
