[project]
name = "gimmegit"
version = "3.0.1.dev0"
description = "A tool for cloning GitHub repos and creating branches."
authors = [
    { name = "Dave Wilding", email = "tech@dpw.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "gitpython==3.1.50",
    "pre-commit==4.6.0",
    "PyGithub==2.9.1",
    # Dependencies of PyGithub. Specified because of security advisories.
    "PyJWT[crypto]==2.13.0",
    "requests==2.34.2",
]

[project.scripts]
gimmegit = "gimmegit._cli:main"

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "pytest==9.0.3",
    "ty==0.0.44",
    "zizmor==1.25.2",
]

[build-system]
requires = [
    "uv_build==0.11.19",
]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 99
